# github-code-reviewer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  create_structure.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  test_file.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: code-review.yml  tests.yml  type-check.yml
config/: default_config.yml  review_rules.yml  schema.json
docs/api/: README.md
docs/changelog/: CHANGELOG.md
docs/contributing/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
docs/examples/: basic_config.yaml
docs/guides/: getting-started.md  quick-start.md
docs/implementation/: ai-integration-plan.md  phase1-todo.md
src/: __init__.py  config.py  reviewer.py
src/ai/: exceptions.py  reviewer.py
src/ai/config/: settings.py  validator.py
src/ai/github/: __init__.py  base.py  github_provider.py  reviewer.py
src/ai/models/: request.py  response.py
src/ai/providers/: anthropic.py  base.py  factory.py
src/ai/reporting/: base.py  markdown.py
src/ai/reporting/templates/: __init__.py  base.py  standard.py
src/ai/storage/: __init__.py  base.py  sqlite.py
src/cli/: review_pr.py
tests/: conftest.py  test_config.py  test_reviewer.py
tests/fixtures/configs/: test_config.yml
tests/fixtures/sample_files/: bad_code.py  good_code.py
tests/integration/: test_github_integration.py
tests/unit/checkers/: test_complexity.py  test_docstrings.py  test_imports.py  test_naming.py
